# Tokenization-tokenization-backend

./: .dockerignore  .env  .env.backup  .env.dev  .env.development  .env.example  .env.local  .env.production  .env.staging  .env.template  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.old  ENVIRONMENT_SETUP.md  Makefile  QUICK_START.md  README.md  README_DEPLOY.MD  ReadME  architecture.md  check-env.sh  deployed.development.env  deployed_addresses.env  docker-compose.old.yml  docker-compose.yml  docker-compose.yml.backup  emergency_pause.sh  emergency_unpause.sh  fix-migration.sh  foundry.toml  foundry.toml.old  monitor_deployment.sh  package-lock.json  prepare_upgrade.sh  quick-start.sh  render.yaml  setup-check.sh  setup-env.sh  (+5 more)
.sqlx/: query-6bf9d102ce52bb377e3c111ff7756757b358222582ebecd39649f2e8943d4e87.json  query-7ff8edd731e1b9995f6b30c5805de2ee344ce2f591db709dee9ea23436a2b8e5.json  query-943ace5aec5f6508b9f5102c6c8ecf9b8c3a20b9d021a0c54837503c70ffd24a.json
cache/: solidity-files-cache.json  test-failures
contracts/: TokenMarketplace.sol
deployments/: 31337.json  contracts-info.json  functions-31337.txt
migrations/: 001_initial_schema.sql  002_compliance_tables.sql  003_analytics_views.sql  004_indexes_optimization.sql  005_add_wallet_address.sql  006_password_reset_tokens.sql  007_fix_tokens_table_columns.sql  00999_markent.sql  202508251435900.sql  20250825143823_008_add_tokens_metadata.sql.sql  20250825143919_009_add_users_active.sql.sql  20250825150000_010_complete_token_model.sql  20250913120000_add_user_indexes.down.sql  20250913120000_add_user_indexes.sql  (+1 more)
script/: Deploy.s.sol  (+10 more)
(+108 files in other folders)
